added "images" file and added images, then linked images to "imaged" folder

--- a/starcraftsite.css
+++ b/starcraftsite.css
@@ -3,7 +3,7 @@ body{
     color:white;
       font-size:16px;
         font-family: helvetica;
-          background-image: galaxy.jpg;
+          background-image: images/galaxy.jpg;
             }
 
 h1{
