--- a/starcraftsite.css
+++ b/starcraftsite.css
@@ -3,8 +3,9 @@ body{
     color:white;
       font-size:16px;
         font-family: helvetica;
-          background-image: images/galaxy.jpg;
-            }
+          background-image: images/galaxy.jpg;}
+
+
 
 h1{
   text-align: center;
