--- a/starcraftsite.css
+++ b/starcraftsite.css
@@ -1,9 +1,9 @@
 body{
   background-color: navy;
     color:white;
-      font-size:16px;
-        font-family: helvetica;
-          background-image: images/galaxy.jpg;}
+      font-size:20px;
+        font-weight:900px;
+          font-family: helvetica;}
 
 a{
   text-align: center;
@@ -22,9 +22,6 @@ h1{
 p{
   text-align: center;}
 *{
-text-align: center;
-}
+    text-align: center;
 
-/* .box{
-  background-image: .jpg;
-    width: 1000px;} */
+}
