--- a/starcraftsite.css
+++ b/starcraftsite.css
@@ -1,27 +1,58 @@
 body{
-  background-color: navy;
+  background-color: black;
     color:white;
       font-size:20px;
         font-weight:900px;
           font-family: helvetica;}
+/* h1, h2, h3 {
+  font-weight: bold font-weight: 900;
+    font-style: italic;
+      margin-bottom: 20px;} */
 
 a{
   text-align: center;
     font-size:30px;
+      font-weight:bold;
 }
 
 
 
 h1{
-  text-align: center;
-    font-size:25px;
-      /* font-family: */
-        margin-right:99px;
-              margin-left:99px;}
+  color: white;
+    text-align: center;
+      font-size:35px;}
+        /* font-family: */
+        /* border:5px solid white;
+          margin-right:99px;
+                margin-left:99px;} */
 
+
+h2{ /*terran*/
+  color: #0000ff;
+    text-align: center;
+      font-size:35px;
+          border:5px solid navy;
+            margin-right:40%;
+                margin-left:40%;}
+
+
+
+h3{ /* zerg*/
+  color: #993333;
+    text-align: center;
+      font-size:35px;
+        border:5px solid navy;
+          margin-right:40%;
+            margin-left:40%;}
+
+h4{/*protoss*/
+  color: teal;
+    text-align: center;
+      font-size:35px;
+        border:5px solid navy;
+          margin-right:40%;
+              margin-left:40%;}
 p{
   text-align: center;}
 *{
-    text-align: center;
-
-}
+    text-align: center;}
